gammaray (2.1.0-3) UNRELEASED; urgency=medium

  [ Jakub Adam ]
  * Force 24-bit color depth to Xvfb
    - attempts to fix "Unsupported screen depth: 8" failures during
      the test runs on some architectures. 

  [ Felix Geyer ]
  * Fix FTBFS on mips64 kernel, ppc64 and arm64.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Sat, 19 Jul 2014 13:58:03 +0200

gammaray (2.1.0-2) unstable; urgency=medium

  * Fix FTBFS on kFreeBSD, Hurd, mips, ppc, and s390x (Closes: #754986).

 -- Jakub Adam <jakub.adam@ktknet.cz>  Fri, 18 Jul 2014 18:26:51 +0200

gammaray (2.1.0-1) unstable; urgency=medium

  [ Felix Geyer ]
  * Call dh_auto_clean for both build directories.

  [ Jakub Adam ]
  * New upstream release.
  * Removed no longer needed use-empty-rpath.patch.
  * Build-depend on qtdeclarative5-private-dev.
  * Create gammaray-plugin-quickinspector binary package.
  * Removed unused license paragraph from d/copyright.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Mon, 07 Jul 2014 21:38:05 +0200

gammaray (2.0.2-1) unstable; urgency=medium

  [ Jakub Adam ]
  * New upstream release.
  * Re-enable tests in Qt5 build.

  [ Felix Geyer ]
  * Make gammaray-dev depend on gammaray-probe-qt4 to fix broken symlinks.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Tue, 06 May 2014 23:01:05 +0200

gammaray (2.0.1-1) unstable; urgency=medium

  * New upstream release.
  * Refreshed d/patches/use-empty-rpath.patch.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Wed, 05 Mar 2014 19:28:40 +0100

gammaray (2.0.0-1) unstable; urgency=low

  * New upstream release.
  * Refreshed d/patches/use-empty-rpath.patch.
  * Removed no longer needed patches:
    - widget-export-actions-location.patch
    - harfbuzz-search-path.patch
    - find-widget-export-actions-when-attaching.patch
    - gammaray-probe-versioned-soname.patch.
  * Use xz for orig tarball compression.
  * Bump Standards-Version to 3.9.5.
  * Enable build of Qt5 GUI and Qt5 + Qt4 probe libraries.
